[gd_scene load_steps=5 format=3 uid="uid://c8c45h2pq2qok"]

[ext_resource type="Script" path="res://entities/abilities/hoover/actions/hoover_suck_action.gd" id="1_7kov7"]
[ext_resource type="PackedScene" uid="uid://x2hlj5hfconk" path="res://entities/abilities/hoover/particle_attractor.tscn" id="2_tmg3j"]
[ext_resource type="Script" path="res://entities/collision_box.gd" id="3_q8u4j"]
[ext_resource type="Theme" uid="uid://br7rkp2l10vsp" path="res://ui/hud/hud.tres" id="4_fn5ar"]

[node name="Suck" type="Node2D"]
script = ExtResource("1_7kov7")
suction_time = 0.5
suction_capacity = 4

[node name="ParticleAttractor" parent="." instance=ExtResource("2_tmg3j")]
min_spawn_position = Vector2i(-16, 20)
max_spawn_position = Vector2i(16, 28)
spawn_max_delay = 0.9
attraction_time = 0.66

[node name="SuckBox" type="Area2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("3_q8u4j")

[node name="CollisionShape" type="CollisionPolygon2D" parent="SuckBox"]
polygon = PackedVector2Array(0, 0, 16, 32, -16, 32)
disabled = true

[node name="CapacityLabel" type="Label" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(8, 8)
offset_left = -4.0
offset_top = -28.0
offset_right = 4.0
offset_bottom = -20.0
theme = ExtResource("4_fn5ar")
text = "0"
